Measure latency between peers and add feedback Previews will be grey when latency is unknown (not measured yet), green when it's good (60ms or less), blue when medium (between 60 and 120), orange when it's becoming high (between 120 and 250) and red when latency is too high to have a good call (250ms or more) To reduce confusion, slected preview will now have a reduced opacity instead of the red border Fix #66

--- a/public/css/vroom.css
+++ b/public/css/vroom.css
@@ -4,10 +4,24 @@
 #webRTCVideo video {
   width: 100%;
   height: auto;
-  box-shadow: 0px 0px 2pt 2pt grey;
 }
 #webRTCVideo .selected {
-  box-shadow: 0px 0px 2pt 2pt red;
+  opacity: 0.7;
+}
+.latencyUnknown{
+  box-shadow: 0px 0px 2pt 3pt grey;
+}
+.latencyGood {
+  box-shadow: 0px 0px 2pt 3pt #5CB85C;
+}
+.latencyMedium {
+  box-shadow: 0px 0px 2pt 3pt #428BCA;
+}
+.latencyWarn {
+  box-shadow: 0px 0px 3pt 3pt #F0AD4E;
+}
+.latencyPoor {
+  box-shadow: 0px 0px 3pt 3pt #D9534F;
 }
 #mainVideo{
   margin-right: auto;
